// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compose > components 0 1`] = `
"@layer properties;
:root, :host {
  --font-sans: ui-sans-serif,system-ui,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  --color-white: #fff;
  --spacing: .25rem;
  --font-weight-medium: 500;
  --radius-sm: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
@layer components {
  .btn-primary {
    border-radius: var(--radius-sm);
    padding-block: calc(var(--spacing) * 4);
    text-align: center;
    font-family: var(--font-sans);
    --tw-font-weight: var(--font-weight-medium);
    font-weight: var(--font-weight-medium);
    color: var(--color-white);
  }
}
@property --tw-font-weight {
  syntax: "*";
  inherits: false;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-font-weight: initial;
    }
  }
}
"
`;

exports[`compose > components 0 2`] = `
"
    view,text,::before,::after,::backdrop {
      --tw-font-weight: initial;
    }
page,.tw-root,wx-root-portal-content,:host {
  --font-sans: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  --color-white: #fff;
  --spacing: .25rem;
  --font-weight-medium: 500;
  --radius-sm: .25rem;
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.btn-primary {
    border-radius: var(--radius-sm);
    padding-top: calc(var(--spacing) * 4);
    padding-bottom: calc(var(--spacing) * 4);
    text-align: center;
    font-family: var(--font-sans);
    --tw-font-weight: var(--font-weight-medium);
    font-weight: var(--font-weight-medium);
    color: var(--color-white);
  }
"
`;

exports[`compose > no components 0 1`] = `
"@layer properties;
:root, :host {
  --font-sans: ui-sans-serif,system-ui,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  --color-white: #fff;
  --spacing: .25rem;
  --font-weight-medium: 500;
  --radius-sm: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.btn-primary {
  border-radius: var(--radius-sm);
  padding-block: calc(var(--spacing) * 4);
  text-align: center;
  font-family: var(--font-sans);
  --tw-font-weight: var(--font-weight-medium);
  font-weight: var(--font-weight-medium);
  color: var(--color-white);
}
@property --tw-font-weight {
  syntax: "*";
  inherits: false;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-font-weight: initial;
    }
  }
}
"
`;

exports[`compose > no components 0 2`] = `
"
    view,text,::before,::after,::backdrop {
      --tw-font-weight: initial;
    }
page,.tw-root,wx-root-portal-content,:host {
  --font-sans: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  --color-white: #fff;
  --spacing: .25rem;
  --font-weight-medium: 500;
  --radius-sm: .25rem;
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.btn-primary {
  border-radius: var(--radius-sm);
  padding-top: calc(var(--spacing) * 4);
  padding-bottom: calc(var(--spacing) * 4);
  text-align: center;
  font-family: var(--font-sans);
  --tw-font-weight: var(--font-weight-medium);
  font-weight: var(--font-weight-medium);
  color: var(--color-white);
}
"
`;
